# omp_testing

./: .gitignore  CMakeLists.txt  README.txt  openmp_speed.cpp  openmp_speed.hpp.in  plot.py
open_mp_functions/: CMakeLists.txt  open_mp_functions.cpp  open_mp_functions.hpp
